<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/first_image"
            android:transitionName="@string/explode_transition"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:elevation="10dp"
            android:background="@android:color/black"
            android:scaleType="centerCrop"
            android:src="@drawable/sample1"/>

        <ImageView
            android:id="@+id/second_image"
            android:transitionName="@string/fade_transition"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            android:background="@android:color/black"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp"
            android:scaleType="centerCrop"
            android:src="@drawable/sample4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/third_image"
            android:transitionName="@string/slide_transition"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="50dp"
            android:background="@android:color/black"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/sample3"/>

        <ImageView
            android:id="@+id/fourth_image"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="50dp"
            android:elevation="10dp"
            android:background="@android:color/black"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/sample2"/>

    </LinearLayout>


</LinearLayout>